# mc-shaders-helpers

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
include/: base_app.h
scripts/text_enc_gen/: charset.txt  output.glsl  text_enc_gen.py
scripts/text_layout_gen/: charset.txt  output.glsl  text_layout_gen.py
src/: base_app.cpp  test.cpp
